--- a/konstruct_template/index.html
+++ b/konstruct_template/index.html
@@ -42,7 +42,7 @@
                 <nav>
                     <ol>
                         <li>
-                            <a href="#introduction">Introduction ...</a>
+                            <a href="#introduction">Introduction</a>
                         </li>
                         <li>
                             <a href="#components">Core Components</a>
